<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="bulllshit">Bulllshit</string>
    <string name="bullshit">Bullshit</string>
    <string name="_1">1</string>
    <string name="tDDodo">TODO</string>
    <string name="tDodo">TODO</string>
    <string name="_2">2</string>
    <string name="buttonText">Add Name</string>
    <string name="linear_ver">Linear ver</string>
    <string name="frame">Frame</string>
    <string name="linear_hor">Linear hor</string>
    <string name="table">Table</string>
</resources>